--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/quest-app
 spring.datasource.username=root
 spring.datasource.password=Mert123.
 spring.main.allow-circular-references= true
+
+questio.app.secret=questApp
+questio.expires.in=604800
